--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "type": "module",
   "scripts": {
 
-    "start": "nodemon server.js",
+    "start": "nodemon server.js"
 
   
 
 
 
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
