--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "back",
+  "name": "cyber-api",
   "version": "1.0.0",
   "main": "server.js",
   "type": "module",
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "scripts": {
-
-    "start": "nodemon server.js"
-
-  
-
-
-
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -21,13 +19,17 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.9",
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.10.2",
-    "nodemailer": "^6.10.0"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.0",
+    "nodemailer": "^6.9.0",
+    "crypto": "^1.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
